@@ -1,20 +1,26 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ V 2.06.02</title>
+<title>Flexc++ V 2.06.03</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body>
 <hr/>
-<h1 id="title">Flexc++ V 2.06.02</h1>
+<h1 id="title">Flexc++ V 2.06.03</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
-<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2008-2017</h2>
+<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2008-2018</h2>
 
 
 <p>
@@ -33,6 +39,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.03">2.06.03</a>
+Mar 08, 2018;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.02">2.06.02</a>
 May 18, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.01">2.06.01</a>
@@ -40,9 +48,7 @@ Mar 04, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.00">2.06.00</a>
 Mar 01, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.05.00">2.05.00</a>
-Apr 13, 2016;
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.04.00">2.04.00</a>
-Mar 06, 2016.
+Apr 13, 2016.
         </ul>
     
 <p>
