@@ -36,6 +36,9 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
+        it() url(2.06.03)
+                (https://github.com/fbb-git/_project_/releases/tag/2.06.03)
+Mar 08, 2018;
         it() url(2.06.02)
                 (https://github.com/fbb-git/_project_/releases/tag/2.06.02)
 May 18, 2017;
@@ -47,10 +50,7 @@ Mar 04, 2017;
 Mar 01, 2017;
         it() url(2.05.00)
                 (https://github.com/fbb-git/_project_/releases/tag/2.05.00)
-Apr 13, 2016;
-        it() url(2.04.00)
-                (https://github.com/fbb-git/_project_/releases/tag/2.04.00)
-Mar 06, 2016.
+Apr 13, 2016.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
