@@ -4,14 +4,20 @@
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">flexc++(1)</h1>
-<h2 id="author">flexc++ scanner generator<br/>(flexc++.2.06.02.tar.gz)</h2>
-<h2 id="date">2008-2017</h2>
+<h2 id="author">flexc++ scanner generator<br/>(flexc++.2.06.03.tar.gz)</h2>
+<h2 id="date">2008-2018</h2>
 
 
 <p>
