@@ -1,21 +1,27 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ (Version 2.06.02) User Guide</title>
+<title>Flexc++ (Version 2.06.03) User Guide</title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 <link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
-<h1 id="title">Flexc++ (Version 2.06.02) User Guide</h1>
+<h1 id="title">Flexc++ (Version 2.06.03) User Guide</h1>
 <h2 id="author">
         <a href="mailto:f.b.brokken@rug.nl">Frank B. Brokken</a>, 
         <a href="mailto:j.p.van.oosten@rug.nl">Jean-Paul van Oosten</a>, and
         (until 0.5.3) Richard Berendsen</h2>
 
-<h2 id="affiliation"><a href="http://www.rug.nl/">University of Groningen</a></h2><h2 id="date">2008-2017</h2>
+<h2 id="affiliation"><a href="http://www.rug.nl/">University of Groningen</a></h2><h2 id="date">2008-2018</h2>
 
 <h1>Table of Contents</h1>
 <dl><dt><h2><a href="flexc++01.html#l1">Chapter 1: Introduction</a></h2></dt>
