@@ -1,9 +1,15 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.06.02) User Guide </title>
+<title> Flexc++ (Version 2.06.03) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
@@ -35,7 +41,7 @@ in <strong >C++</strong>, and merely generating <strong >C++</strong> code. Most
 be usable with <strong >flexc++</strong>, with minor adjustments (see also `<a href="flexc++02.html#differences">differences
 with flex/flex++ 2</a>').
 <p>
-This edition of the manual documents version 2.06.02 and provides detailed
+This edition of the manual documents version 2.06.03 and provides detailed
 information on <strong >flexc++</strong>'s use and inner workings. Some texts are adapted from the
 <a href="http://flex.sourceforge.net/manual/index.html">flex manual</a>.  The manual
 page <strong >flexc++</strong>(1) provides an overview of the command line options and
