@@ -1,9 +1,15 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.06.02) User Guide </title>
+<title> Flexc++ (Version 2.06.03) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
+    .XXfc {margin-left:auto;margin-right:auto;}
+    .XXtc {text-align: center;}
+    .XXtl {text-align: left;}
+    .XXtr {text-align: right;}
+    .XXvt {vertical-align: top;}
+    .XXvb {vertical-align: bottom;}
 </style>
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
@@ -107,7 +113,7 @@ The resulting DFA becomes:
 <p>
 <table>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -119,7 +125,7 @@ The resulting DFA becomes:
 <td > StateSet</td> <td align="center">a</td>         <td > F</td>  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -145,7 +151,7 @@ The resulting DFA becomes:
             <td > 12345</td>     <td > 12345</td> <td align="right">0</td>    
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 </table></div>
@@ -1191,7 +1197,7 @@ the pattern <code >(a|ab)+/(a|ba)+</code>, producing the DFA
     <div style="text-align: center">
     <table>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -1203,7 +1209,7 @@ the pattern <code >(a|ab)+/(a|ba)+</code>, producing the DFA
 <td > StateSet</td> <td align="center">a</td> <td align="center">b</td> <td align="center">Final</td>  
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
 <p>
 
@@ -1246,7 +1252,7 @@ the pattern <code >(a|ab)+/(a|ba)+</code>, producing the DFA
 <td > 7</td><td align="center">7</td><td align="center">5</td>   <td > 0</td> 
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 </table></div>
@@ -1264,7 +1270,7 @@ final DFA becomes:
     <div style="text-align: center">
     <table>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 <tr >
@@ -1276,7 +1282,7 @@ final DFA becomes:
 <td > StateSet</td> <td align="center">a</td> <td align="center">b</td> <td align="center">Final</td> 
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
 <p>
 
@@ -1309,7 +1315,7 @@ final DFA becomes:
 <td > 5</td><td align="center">5</td><td align="center">4</td> <td > 0</td> 
 </tr>
 
-    <td colspan=4><hr/></td>
+    <tr><td colspan=4><hr/></td></tr>
 
     
 </table></div>
@@ -1701,7 +1707,7 @@ stops as soon as a condition hold true, returning the action type:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -1717,7 +1723,7 @@ stops as soon as a condition hold true, returning the action type:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 <tr >
@@ -1743,7 +1749,7 @@ stops as soon as a condition hold true, returning the action type:
  
 </tr>
 
-    <td colspan=3><hr/></td>
+    <tr><td colspan=3><hr/></td></tr>
 
     
 </table></div>
@@ -1796,7 +1802,7 @@ Three variables are used here, resulting in 8 possibilities:
     <div style="text-align: center">
     <table>
 
-    <td colspan=6><hr/></td>
+    <tr><td colspan=6><hr/></td></tr>
 
     
 <tr >
@@ -1811,7 +1817,7 @@ Three variables are used here, resulting in 8 possibilities:
  
 </tr>
 
-    <td colspan=6><hr/></td>
+    <tr><td colspan=6><hr/></td></tr>
 
     
 <tr >
@@ -1892,7 +1898,7 @@ Three variables are used here, resulting in 8 possibilities:
  
 </tr>
 
-    <td colspan=6><hr/></td>
+    <tr><td colspan=6><hr/></td></tr>
 
     
 </table>
