@@ -1,3 +1,14 @@
+flexc++ (2.06.03)
+
+  * Added C++-17 attributes like [[fallthrough]] and [[maybe_notused]] to
+    flexc++'s and its generated code.
+
+  * Improved the layout and fixed an error in some generated debug-statements
+
+  * By implication: g++ >= 7.00.00 is required to compile the generated code.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 08 Mar 2018 12:44:31 +0100
+
 flexc++ (2.06.02)
 
   * Flexc++'s parser code was generated by bisonc++ V 6.00.00.
